fix header spacing

--- a/public/style.css
+++ b/public/style.css
@@ -273,6 +273,7 @@ body > header {
   flex-grow: 1;
   font-family: "CafeAndBrewery";
   font-size: 3em;
+  line-height: 0.75;
   padding: 0;
   text-transform: none;
   display: -webkit-box;
